--- a/src/stylesheets/SearchResults.css
+++ b/src/stylesheets/SearchResults.css
@@ -20,6 +20,7 @@
     border: #264653 2px solid;
     margin: 1%;
     cursor: pointer;
+    position: relative;
   }
   
   .itemContainer:focus,
@@ -41,7 +42,7 @@
   .itemContainer img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
   }
   
   /* Description portion under item */
@@ -54,4 +55,18 @@
   
   .itemInfo {
     margin-top: 5%;
+  }
+
+  .clickedLikeButton,
+  .likeButton {
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    padding: 15px;
+  }
+
+  .clickedLikeButton {
+    background-color: #F4A261;
+    color: red;
   }
