--- a/src/stylesheets/Favourites.css
+++ b/src/stylesheets/Favourites.css
@@ -24,7 +24,7 @@
     position: fixed;
     z-index: 10;
     top: 0%;
-    right: 6%;
+    right: 45px;
     background-color: #E9C46A;
     border-radius: 50%;
   }
@@ -65,6 +65,7 @@
     margin: 3% 0;
     border: 2px solid #264653;
     border-radius: 18px;
+    width: 90%;
   }
   
   
@@ -103,6 +104,10 @@
     font-weight: bold;
   }
   
+  .descNull {
+    display: none;
+  }
+
   .favouritesRemove {
     border: none;
     padding: 3%;
@@ -116,7 +121,8 @@
     color: #264653;
     background-color: #EE7766;
   }
-  
+
+
   @media screen and (max-width: 480px)  {
     .favouritesItem {
       font-size: 14px;
