--- a/src/stylesheets/Favourites.css
+++ b/src/stylesheets/Favourites.css
@@ -122,6 +122,9 @@
     background-color: #EE7766;
   }
 
+  favCloseButton {
+    z-index: 6;
+  }
 
   @media screen and (max-width: 480px)  {
     .favouritesItem {
