changed site colour styling

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -286,14 +286,14 @@ body {
 
 
 h1 {
-  color: #E9C46A;
+  color: #FFFCF2;
   font-size: 60px;
   margin: 2% 0 2% 5%;
 }
 
 
 h1 span {
-  color: #EE7766;
+  color: #EB5E28;
 }
 
 
