--- a/src/stylesheets/ExtraDetails.css
+++ b/src/stylesheets/ExtraDetails.css
@@ -17,7 +17,7 @@
   bottom: 5%;
   width: 80vw;
   background-color: #FFDF90;
-  border: 3px solid #264653;
+  border: 3px solid #252422;
   border-radius: 18px;
   max-width: 1500px;
   max-height: 90vh;
@@ -44,8 +44,8 @@
   right: 5px;
   font-size: 20px;
   border-radius: 50%;
-  color: #EE7766;
-  background-color: #264653;
+  color: #EB5E28;
+  background-color: #252422;
   border: 2px solid transparent;
   z-index: 5;
   cursor: pointer;
@@ -53,19 +53,22 @@
 
 .closeButton:hover,
 .closeButton:focus{
-  color: #264653;
-  background-color: #EE7766;
-  border: 2px solid #264653;
+  color: #252422;
+  background-color: #EB5E28;
+  border: 2px solid #252422;
 }
 
 .expandedImage {
-  height: 50%;
+  margin-bottom: 3%;
   width: 100%;
+  height: auto;
+  max-height: 100%;
 }
 
 .expandedImage img{
-  max-height: 100%;
   width: 100%;
+  height: 100%;
+  max-height: 45vh;
   object-fit: contain;
 }
 
@@ -83,32 +86,27 @@
   margin-bottom: 10%;
 }
 
-.addToCart {
-  margin-top: 20%;
-  padding: 10%;
+.addToFavourites {
+  margin: 1% auto;
+  padding: 2%;
+  border-radius: 18px;
   cursor: pointer;
-  border: 2px solid #264653;
+  border: 2px solid #252422;
+  color: #FFDF90;
+  background-color: #252422;
 }
 
-.addToCart:hover,
-.addToCart:focus{
-  color: #264653;
-  background-color: #EE7766;
-  border: 2px solid #264653;
+.addToFavourites:hover,
+.addToFavourites:focus{
+  color: #252422;
+  background-color: #EB5E28;
+  border: 2px solid #252422;
 }
 
-.expandedImgInfo {
-  height: 50%;
-  display: flex;  
-}
-
-
-.expandedDesc {
-  height: 50%;
-}
 
 .expandedTitle {
-  color: #264653;
+  color: #252422;
   font-size: 20px;
-  margin: 2% 0 5% 0;
+  margin: 2% 0;
 }
+
