--- a/src/stylesheets/Favourites.css
+++ b/src/stylesheets/Favourites.css
@@ -4,7 +4,7 @@
     top: 0%;
     right: 0%;
     z-index: 4;
-    color: #264653;
+    color: #252422;
     cursor: pointer;
   }
   
@@ -17,7 +17,7 @@
   
   .favouritesTriangle:hover,
   .favouritesTriangle:focus {
-    border-top: 100px solid #EE7766; 
+    border-top: 100px solid #EB5E28; 
   }
 
   .favouritesNumberBubble {
@@ -25,7 +25,7 @@
     z-index: 10;
     top: 0%;
     right: 45px;
-    background-color: #E9C46A;
+    background-color: #FFFCF2;
     border-radius: 50%;
   }
 
@@ -44,7 +44,7 @@
   }
   
   .yourFavourites {
-    color: #264653;
+    color: #252422;
   }
   
   .emptyFavourites {
@@ -63,7 +63,7 @@
     justify-content: space-between;
     padding: 0 2% 0 0;
     margin: 3% 0;
-    border: 2px solid #264653;
+    border: 2px solid #252422;
     border-radius: 18px;
     width: 90%;
   }
@@ -91,7 +91,7 @@
   }
   
   .favouritesBubble {
-    background-color: #264653;
+    background-color: #252422;
     padding: 1.5% 3%;
     border-radius: 18px;
     width: 85px;
@@ -100,7 +100,7 @@
   }
   
   .favouritesPrice {
-    color: #E9C46A;
+    color: #FFFCF2;
     font-weight: bold;
   }
   
@@ -113,13 +113,13 @@
     padding: 3%;
     border-radius: 18px;
     cursor: pointer;
-    border: #264653 1px solid;
+    border: #252422 1px solid;
   }
   
   .favouritesRemove:focus,
   .favouritesRemove:hover {
-    color: #264653;
-    background-color: #EE7766;
+    color: #252422;
+    background-color: #EB5E28;
   }
 
   favCloseButton {
