--- a/src/stylesheets/SearchResults.css
+++ b/src/stylesheets/SearchResults.css
@@ -9,18 +9,18 @@
   }
   
   .itemContainer, p {
-    color: #264653;
+    color: #252422;
   }
 
   .itemContainer {
     max-width: 20%;
     min-width: 200px;
     max-height: 600px;
-    background-color: #FFFFFF;
+    background-color: #FFFCF2;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: #264653 3px solid;
+    border: #252422 3px solid;
     margin: 1%;
     cursor: pointer;
     position: relative;
@@ -28,21 +28,34 @@
 
   .itemContainer:focus,
   .itemContainer:hover {
-    border: #FFFFFF 3px solid;
+    border: #FFFCF2 3px solid;
   }
   
     .clickedLikeButton,
     .likeButton {
       position: absolute;
-      top: 0;
-      right: 0;
+      top: 1px;
+      right: 1px;
       cursor: pointer;
-      padding: 15px;
+      padding: 10px;
+      border-radius: 18px;
+      border: 2px solid transparent;
     }
-  
+    .likeButton:focus, 
+    .likeButton:hover {
+      border: 2px solid #FFFCF2;
+      background-color: #403D39;
+      color: #FFFCF2;
+    }
+    .clickedLikeButton:focus,
+    .clickedLikeButton:hover {
+      background-color: #403D39;
+      color: #F4A261;
+
+    }
+
     .clickedLikeButton {
       background-color: #F4A261;
-      color: red;
     } 
   
   .itemImage {
@@ -64,7 +77,7 @@
   
   /* Description portion under item */
   .itemText {
-    color: #264653;
+    color: #252422;
     background-color: #F4A261;
     position: relative;
     padding: 10px;
