--- a/src/stylesheets/HeaderFooter.css
+++ b/src/stylesheets/HeaderFooter.css
@@ -10,6 +10,28 @@
   overflow: hidden; 
 }
 
+.titleText {
+  margin-left: 5%;
+}
+
+h1,
+.subtitle {
+  margin: 2% 0;
+  color: #FFFCF2;
+}
+
+.title {
+  display: flex;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+h1 span {
+  color: #EB5E28;
+}
+
 .imageTriangle {
   width: 0;
   height: 0;
@@ -59,5 +81,16 @@ main {
     width: 72px;
     height: 72px;
     opacity: 0;
+  }
+}
+
+
+@media screen and (max-width: 480px)  {
+  .title {
+    flex-direction: column;
+  }
+  
+  h1 {
+    margin: 0;
   }
 }
