--- a/src/stylesheets/SearchResults.css
+++ b/src/stylesheets/SearchResults.css
@@ -1,6 +1,5 @@
 /* 
 /* Product area */
-/* Look inside ShowProduct.js for product divs */
 .productContainers {
     width: 100%;
     display: flex;
@@ -8,22 +7,21 @@
     flex-wrap: wrap;
   }
   
-  .itemContainer, p {
+  .itemContainer, 
+  p {
     color: #252422;
   }
 
   .itemContainer {
-    max-width: 20%;
-    min-width: 200px;
-    max-height: 600px;
     background-color: #FFFCF2;
+    width: 250px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
     border: #252422 3px solid;
     margin: 1%;
     cursor: pointer;
-    position: relative;
   }
 
   .itemContainer:focus,
@@ -31,36 +29,11 @@
     border: #FFFCF2 3px solid;
   }
   
-    .clickedLikeButton,
-    .likeButton {
-      position: absolute;
-      top: 3px;
-      right: 3px;
-      cursor: pointer;
-      padding: 10px;
-      border-radius: 18px;
-      border: 2px solid transparent;
-    }
-    .likeButton:focus, 
-    .likeButton:hover {
-      border: 2px solid #FFFCF2;
-      background-color: #403D39;
-      color: #FFFCF2;
-    }
-    .clickedLikeButton:focus,
-    .clickedLikeButton:hover {
-      background-color: #403D39;
-      color: #F4A261;
-    }
-
-    .clickedLikeButton {
-      background-color: #F4A261;
-    } 
   
   .itemImage {
-    height: 100%;
-    max-height: 100%;
-    min-height: 350px;
+    height: 300px;
+    max-height: 300px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,19 +51,43 @@
   .itemText {
     color: #252422;
     background-color: #F4A261;
-    position: relative;
+    height: 30%;
     padding: 10px;
   }
   
   .itemDate {
-    padding: 2%;
-    background-color: #252422;
-    border-radius: 18px;
     text-align: center;
     color: #FFFCF2;
+    background-color: #252422;
+    border-radius: 18px;
+    padding: 2%;
     margin-bottom: 10px;
   }
 
   .descNull {
     display: none;
   }
+
+  .clickedLikeButton,
+  .likeButton {
+    padding: 3% 4%;
+    border: 2px solid transparent;
+    border-radius: 18px;
+    cursor: pointer;
+  }
+  
+  .likeButton:focus, 
+  .likeButton:hover {
+    color: #FFFCF2;
+    border: 2px solid #FFFCF2;
+    background-color: #403D39;
+  }
+  .clickedLikeButton:focus,
+  .clickedLikeButton:hover {
+    color: #F4A261;
+    background-color: #403D39;
+  }
+
+  .clickedLikeButton {
+    background-color: #F4A261;
+  } 
