--- a/src/stylesheets/SideNav.css
+++ b/src/stylesheets/SideNav.css
@@ -14,16 +14,16 @@
   .navWrapper {
     width: 100%;
     position: sticky;
-    position: -webkit-sticky; /* Safari */
+    position: -webkit-sticky; /* for Safari */
     top:0;
   }
 
   .countForm {
     width: 100%;
-    margin: 20% auto;
     display: flex;
     flex-direction: column;
     padding-top: 50px;
+    margin: 20% auto;
   }
 
   .countForm label {
@@ -32,23 +32,23 @@
   }
 
   .countInput {
-    width: 50%;
-    margin: 20px auto;
-    padding: 10px 0;
     text-align: center;
     font-size: 20px;
+    width: 50%;
+    padding: 10px 0;
+    margin: 20px auto;
   }
   
   .submit {
-    cursor: pointer;
-    width: 100%;
     font-size: 20px;
-    background-color: transparent;
-    border: none;
     color: #FFFCF2;
+    background-color: transparent;
+    width: 100%;
+    border: none;
     border-bottom: #EB5E28 2px solid;
     border-top: #EB5E28 2px solid;
     padding: 10% 4%;
+    cursor: pointer;
   }
   
     /* Class for CSS "fill" effect  */
