--- a/src/stylesheets/ExtraDetails.css
+++ b/src/stylesheets/ExtraDetails.css
@@ -14,8 +14,7 @@
   background-color: #FFDF90;
   width: 80vw;
   max-width: 1500px;
-  height: 95vh;
-  max-height: 90vh;
+  height: 80vh;
   position: fixed;
   left: 15%;
   bottom: 5%;
@@ -104,7 +103,7 @@
 }
 
 .expandedDate {
-  width: auto;
+  width: 50%;
   background-color: #252422;
   display: inline-block;
   padding: 1%;
