--- a/src/stylesheets/Favourites.css
+++ b/src/stylesheets/Favourites.css
@@ -53,20 +53,18 @@
     margin: 0 0 10% 0;
   }
   
-  .favouritesList {
-    padding: 0 5% 5% 5%;
-  }
-  
   .favouritesItem {
     width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 2% 0 0;
+    padding-right: 2%;
     margin: 3% 0;
+    margin-right: 0;
     border: 2px solid #252422;
     border-radius: 18px;
   }
+
   
   
   .favouritesImage {
@@ -74,14 +72,14 @@
     height: 100px;
     width: 100px;
     min-width: 100px;
-    padding: 2%;
     border-radius: 18px;
+    overflow: hidden;
   }
   
   .favouritesImage img {
     height: 100%;
     width: 100%;
-    object-fit: contain;
+    object-fit: cover;
     margin: 0 auto;
   }
   
@@ -110,12 +108,11 @@
 
   .favDetails,
   .favouritesRemove {
-    padding: 3%;
     border: #252422 1px solid;
     border-radius: 18px;
     cursor: pointer;
   }
-
+  
   .favDetails:focus,
   .favDetails:hover,
   .favouritesRemove:focus,
@@ -123,9 +120,17 @@
     color: #252422;
     background-color: #EB5E28;
   }
+  .favouritesRemove {
+    padding: 3%;
+  }
 
+  .remove1 {
+    display: none;
+  }
+  
   .favDetails {
     margin-top: 10px;
+    padding: 2%;
   }
 
   favCloseButton {
@@ -136,6 +141,31 @@
     .favouritesItem {
       font-size: 14px;
       padding: 0;
+      flex-direction: column;
+      text-align: center;
     }
+    .favouritesItem button {
+      padding: 4%;
+    }
+
+    .favouritesTitle {
+      margin-top: 10px;
+    }
+
+    .favouritesRemove {
+      margin: 10px 0;
+    }
+    
+    .remove1 {
+      display: inline-block;
+      margin-left: 25%;
+    }
+
+    .remove2 {
+      display: none;
+    }
+
+
+
   }
   
