--- a/src/stylesheets/Favourites.css
+++ b/src/stylesheets/Favourites.css
@@ -148,6 +148,10 @@
       padding: 4%;
     }
 
+    .favouritesImage {
+      margin-top: 10px;
+    }
+
     .favouritesTitle {
       margin-top: 10px;
     }
@@ -158,7 +162,7 @@
     
     .remove1 {
       display: inline-block;
-      margin-left: 25%;
+      margin-left: 10%;
     }
 
     .remove2 {
