--- a/src/stylesheets/SearchResults.css
+++ b/src/stylesheets/SearchResults.css
@@ -22,8 +22,8 @@
   
   
   .itemImage {
-    height: 300px;
-    max-height: 300px;
+    height: 320px;
+    max-height: 320px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -61,6 +61,7 @@
 
   .clickedLikeButton,
   .likeButton {
+    margin-top: 10px;
     padding: 3% 4%;
     border: 2px solid transparent;
     border-radius: 18px;
