--- a/src/stylesheets/SearchResults.css
+++ b/src/stylesheets/SearchResults.css
@@ -22,8 +22,7 @@
   
   
   .itemImage {
-    height: 320px;
-    max-height: 320px;
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
@@ -35,6 +34,7 @@
   .itemContainer img {
     width: 100%;
     height: 100%;
+    min-height: 320px;
     object-fit: cover;
   }
   
@@ -42,7 +42,6 @@
   .itemText {
     color: #252422;
     background-color: #F4A261;
-    height: 30%;
     padding: 10px;
   }
   
