--- a/src/stylesheets/SideNav.css
+++ b/src/stylesheets/SideNav.css
@@ -86,7 +86,7 @@
   .repoLink .fab ,
   .repoLink:visited {
     color: #EB5E28;
-    padding: 20px 0;
+    margin: 20px 0;
   }
 
   .repoLink .fab:hover,
@@ -104,12 +104,13 @@
     }
   }
 
-  @media screen and (min-width: 480px)  {
+  @media screen and (max-width: 820px)  {
     /* Error handling: if screen is too small vertically, can still scroll through categories, loses sticky property */
     
   .repoLink,
-  .repoLink .fab {
-    padding: 0;
+  .repoLink .fab,
+  .repoLink:visited {
+    margin: 0;
   }
   
   .repoLink .fab {
